# robo_comm_app

./: CMakeLists.txt  README.md  backup_serial.txt  main.qml  robo_comm_app_de_DE.ts
include/: communication.hpp  rob_can_msggen.hpp
src/: communication.cpp  main.cpp  rob_can_msggen.cpp
